Changelog
=========


1.6.1 (unreleased)
------------------

- Nothing changed yet.


1.6.0 (2014-02-03)
------------------

- Improve blog archive portlet
  [elio.schmutz]

- Improve default tagcloud and categories styling.
  [mathias.leimgruber]

- New portlet: BlogEntry collection portlet.
  [mathias.leimgruber]

- Update German, French and English translations.
  [jone]


1.5.2 (2014-01-13)
------------------

- Update translations (Gallery feature).
  [mathias.leimgruber]


1.5.1 (2014-01-07)
------------------

- Add upgrade step, which fixes the wrong archive portlet title.
  [mathias.leimgruber]

- Fix typo in archive portlet label.
  [mathias.leimgruber]


1.5 (2013-10-29)
----------------

- Add lead image.
  [mathias.leimgruber]


1.4 (2013-09-20)
----------------

- Add relatedItems field to BlogEntry.
  [mathias.leimgruber]

- Add ftw.colorbox.
  [mathias.leimgruber]

- Add boolean field to blog entry, let the user decide if he want to
  include the images directly into the blog entry or show the images as
  gallery.
  [mathias.leimgruber]

- Remove allow_buttons on BlogEntry - go back to global tinymce settings
  [mathias.leimgruber]

1.3.1 (2013-05-24)
------------------

- Change document byline: Remove ModificationDate, add CreationDate,
  disable default byline for Anonym users.
  [elio.schmutz]

- Disable the 'Comments ()' string if discussion is disabled on the given
  BlogEntry.
  [elio.schmutz]


1.3 (2013-04-16)
----------------

- Lawgiver support: map permissions.
  [jone]

- Use Month msgid function from plone
  [tschanzt]

- Exclude categories folder from navigation.
  [jone]

- Blog entry: use text/x-html-safe output format and only allow text/html input.
  [jone]

- Updated batching in blog view.
  [Julian Infanger]

- Show the amount of comments in blog listing.
  [Julian Infanger]

- Remove search blog viewlet.
  [Julian Infanger]

- Protect unused fields, so they are only visible for manager.
  [Julian Infanger]
