@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<object name="portal_properties" meta_type="Plone Properties Tool">
+
+    <object name="imaging_properties" meta_type="Plone Property Sheet">
+        <property name="allowed_sizes" type="lines" purge="False">
+            <element value="blog_portlet_leadimage 200:100"/>
+        </property>
+    </object>
+</object>
